# h8_multistream_rtsp

./: README.md  multistream_hailo.sh  send_rtsp.sh
cpp_impl/: CMakeLists.txt  build.sh  multistream_hailo.cpp
cpp_impl/hailo_core/: gst_hailo_meta.cpp  gst_hailo_meta.hpp  hailo_objects.hpp
